--- a/metridoc-grails-core/web-app/css/main.css
+++ b/metridoc-grails-core/web-app/css/main.css
@@ -176,6 +176,17 @@ img {
     font-size: small;
 }
 
+#metridocFooter {
+    position: relative;
+}
+
+#metridocReportIssues {
+    position: absolute;
+    bottom: 4px;
+    right: 4px;
+    font-size: small;
+}
+
 .content {
 }
 
