--- a/metridoc-grails-core/web-app/ldapSettings/css/ldapSettings.css
+++ b/metridoc-grails-core/web-app/ldapSettings/css/ldapSettings.css
@@ -12,6 +12,4 @@
   *	or implied. See the License for the specific language governing
   *	permissions and limitations under the License.  */
 
-code {
-    white-space: normal;
-}
+.userInput{width:750px;}
