--- a/metridoc-grails-core/web-app/manageConfig/css/manageConfig.css
+++ b/metridoc-grails-core/web-app/manageConfig/css/manageConfig.css
@@ -12,12 +12,11 @@
   *	or implied. See the License for the specific language governing
   *	permissions and limitations under the License.  */
 
-#newRoleButton {
-    padding-top: 10px
+code {
+    white-space: normal;
 }
 
-.lMargin25{margin-left:25px;}
-
-.border-top{border-top: 1px solid #ddd;}
-
-.font16{font-size: 16px; color: #48802c;}
+#shutdownDate{width: 150px;}
+#dateLabel{padding-left: 15px;}
+.lMargin25{margin-left: 25px;}
+.noDisplay{display:none;}
