--- a/metridoc-grails-core/web-app/ldapRole/css/ldapRole.css
+++ b/metridoc-grails-core/web-app/ldapRole/css/ldapRole.css
@@ -20,9 +20,7 @@
     display: none;
 }
 
-.lMargin25{margin-left:25px;}
-
-.lMargin180{margin-left:180px;}
+#ldapGroups{margin-left:25px;}
 
 .popRoles{font:14;}
 
@@ -31,3 +29,5 @@
 .ldap-header{font-size:14px; color:black;}
 
 .ldap-span{margin-left: 25px;}
+
+.btn btn-danger{margin-left: 180px;}
