--- a/metridoc-grails-core/web-app/manageReport/css/manageReport.css
+++ b/metridoc-grails-core/web-app/manageReport/css/manageReport.css
@@ -84,7 +84,7 @@
     display: none;
 }
 
-.lMargin25{margin-left:25px;}
+#manageReport{margin-left:25px;}
 
-.border-top{border-top: 1px solid #ddd;}
+.top-border{border-top: 1px solid #ddd;}
 
