--- a/metridoc-grails-core/web-app/role/css/role.css
+++ b/metridoc-grails-core/web-app/role/css/role.css
@@ -16,8 +16,8 @@
     padding-top: 10px
 }
 
-.lMargin25{margin-left:25px;}
+#manageRole{margin-left:25px;}
 
-.border-top{border-top: 1px solid #ddd;}
+.top-border{border-top: 1px solid #ddd;}
 
-.font16{font-size: 16px; color: #48802c;}
+#new-role-header{font-size: 16px; color: #48802c;}
