Change camel case to dash convention

--- a/metridoc-grails-core/web-app/manageReport/css/manageReport.css
+++ b/metridoc-grails-core/web-app/manageReport/css/manageReport.css
@@ -84,7 +84,7 @@
     display: none;
 }
 
-#manageReport{margin-left:25px;}
+#manage-report{margin-left:25px;}
 
 .top-border{border-top: 1px solid #ddd;}
 
