--- a/metridoc-grails-core/web-app/role/css/role.css
+++ b/metridoc-grails-core/web-app/role/css/role.css
@@ -16,7 +16,7 @@
     padding-top: 10px
 }
 
-#manageRole{margin-left:25px;}
+#manage-role{margin-left:25px;}
 
 .top-border{border-top: 1px solid #ddd;}
 
