--- a/metridoc-grails-rid/web-app/css/RidTransaction.css
+++ b/metridoc-grails-rid/web-app/css/RidTransaction.css
@@ -36,6 +36,28 @@
     width: 80px;
 }
 
+#dateOfInstructionLabel{
+    width: 150px;
+    margin-left: -37px;
+}
+
+#spreadsheetUploadForm{
+    padding-top: 15px;
+}
+
+#libraryUnitControls, #spreadsheetUploadPath{
+    margin-left: 45px; float: left;
+}
+
+#spreadsheetDownload{
+    margin-left: 5px;
+    float: left;
+}
+
+#submitSpreadsheet{
+    margin-bottom: 10px;
+}
+
 label {
     font-size: 12px;
 }
@@ -110,4 +132,64 @@ label {
     color: green;
     border-top-color: green;
     border-bottom-color: green;
+}
+
+.hidden-div {
+    display: none;
+}
+
+.modal-label{
+    font-size: 14px;
+}
+
+.select-create{
+    width:120px;
+}
+
+.input-create{
+    width:120px;
+}
+
+.input-search{
+    width:150px;
+}
+
+.input-wide{
+    width:150px;
+}
+
+.input-box{
+    width:350px
+}
+
+.search-date-middle{
+    font-size: 12px;
+    color: #666666;
+}
+
+.clickable-row{
+    cursor: pointer;
+}
+
+.template-header{
+    padding-bottom: 10px;
+}
+
+.stats-overview{
+    overflow:auto;
+    font-size:10pt;
+}
+
+.stats-table{
+    overflow:auto;
+    font-size:10pt;
+    height:260px;
+}
+
+.show-table{
+    font-size: 12px;
+    border-top: 0px;
+    width: 90%;
+    table-layout: fixed;
+    word-wrap: break-word;
 }
