Fix formatting in RID admin forms
#129 #130

--- a/metridoc-grails-core/web-app/manageConfig/css/manageConfig.css
+++ b/metridoc-grails-core/web-app/manageConfig/css/manageConfig.css
@@ -16,7 +16,8 @@ code {
     white-space: normal;
 }
 
-#shutdownDate{width: 150px;}
+#shutdownDate{width: 125px;}
 #dateLabel{padding-left: 15px;}
 #metridocConfig{display:none;}
 #status{margin-left: 25px;}
+#metridocConfigPath{margin-bottom: 5px;}
