--- a/metridoc-grails-gate/web-app/css/GateTransaction.css
+++ b/metridoc-grails-gate/web-app/css/GateTransaction.css
@@ -2,3 +2,17 @@ table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
+
+table {
+	width: 100%;
+	table-layout: fixed;
+}
+
+th, td {
+	width: 80px;
+	word-break: break-word;
+}
+
+.gate_summary_header {
+	white-space: normal;
+}
